--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.3",
     "underscore": "^1.8.3"
-  },
+  }, 
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
@@ -19,3 +21,4 @@
     "eject": "react-scripts eject"
   }
 }
+	 
